// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClientApp should render correctly 1`] = `
<EventContextProvider>
  <BrowserRouter
    data="someData!"
    routes={
      Array [
        "someRoute",
      ]
    }
  >
    <withRouter(App)
      initialData="someData!"
      routes={
        Array [
          "someRoute",
        ]
      }
    />
  </BrowserRouter>
</EventContextProvider>
`;

exports[`ServerApp no passed routerContext should render correctly 1`] = `
<StaticRouter
  context={Object {}}
  data="somePassedData"
  location="someUrl"
  routes={
    Array [
      "someRoute",
    ]
  }
>
  <withRouter(App)
    initialData="somePassedData"
    routes={
      Array [
        "someRoute",
      ]
    }
  />
</StaticRouter>
`;

exports[`ServerApp should render correctly 1`] = `
<StaticRouter
  context={
    Object {
      "context": "someRouterContext",
    }
  }
  data="somePassedData"
  location="someUrl"
  routes={
    Array [
      "someRoute",
    ]
  }
>
  <withRouter(App)
    initialData="somePassedData"
    routes={
      Array [
        "someRoute",
      ]
    }
  />
</StaticRouter>
`;
